Updated description day 20, and minor refactoring